--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <div>
+    <!--<div>
       <button onclick="test()">查询</button>
-    </div>
+    </div>-->
   </body>
   
   <script>
@@ -28,7 +28,7 @@
         latitude = result.get("Latitude");
         longtitude = result.get("Longtitude");
         // alert(score + "," + latitude);
-        console.log("---查询成功"  + latitude + "," + longtitude);
+        // console.log("---查询成功"  + latitude + "," + longtitude);
         //   // 百度地图API功能
         // var map = new BMap.Map("allmap");
         // var point = new BMap.Point(longtitude, latitude); // 经纬度相反
@@ -46,7 +46,7 @@
     function test (){
       alert(latitude+"-->"+longtitude);
     };
-  </script
+  </script>
 
 
 </html>
